[project]
name = "ig-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flet[all]==0.27.6",
    "flet-image-gallery-saver @ git+https://github.com/ositoMalvado/image_gallery.git",
]

[tool.flet]
org = "pj.code"
product = "ImageGalley"
company = "ositoMalvado"
copyright = "Copyright (C) 2024 by Julian Perez"
build_number = 1

[tool.flet.splash]
color = "#2f2f2f"
dark_color = "#2f2f2f"
web = true
ios = true
android = true

[tool.flet.ios.info] # --info-plist
NSPhotoLibraryAddUsageDescription = "This app uses location service when in use."



[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.6",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.27.6"}